src/objects/StudentEmploymentHistory__c.object
<CustomObject>
    <description>Custom object to manage employers as reported by students in their profile, many to many</description>
    <fields>
        <fullName>AnnualIncome__c</fullName>
        <label>Annual Income</label>
        <picklist>
            <picklistValues>
                <fullName>less than $16,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$16,000 - $24,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25,000 - $34,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$35,000 - $44,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$45,000 - $64,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$65,000 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Student employer record</description>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Student Employment History</relationshipLabel>
        <relationshipName>StudentEmploymentHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherEmployer__c</fullName>
        <label>If Other Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentAttributes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Student to Employer lookup, many to many</description>
        <label>Student Attributes</label>
        <referenceTo>StudentAttributes__c</referenceTo>
        <relationshipName>StudentsToEmployers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student Employment History</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Student Employer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Employment History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>